# LLM-Butler

./: .gitignore  CMakeLists.txt  README.MD
apps/cli/: main.cpp
include/butler/cli/: commands.hpp
include/butler/fs/: app_paths.hpp  butler_config.hpp  filesystem.hpp  filesystem_ops.hpp  types.hpp
src/cli/: commands.cpp
src/fs/: app_paths.cpp  butler_config.cpp  filesystem.cpp  filesystem_ops.cpp  types.hpp
tests/: fs_tests.cpp
